# monarch_tools_old

./: .gitignore  .pre-commit-config.yaml  DEV_NOTES.md  GIT_SETUP.md  Makefile  PYCHARM_SETUP.md  README.md  apply_monarch_patch.sh  pyproject.toml  run.sh  run_pipeline.sh
_bak/: __main__.py.20251230_142514
backups/taxonomy-20251229-100730/: rules.json
data/: categories.txt  groups.txt  rules.json  rules.json.bak  rules.json.bak.20251230-141936
prompts/: activity_prompt.txt  categorize_edit.txt  category2.txt  category_autocomplete_spec.md  category_edit.txt  category_edit_2.txt  category_edit_3.txt  category_prompt.txt  remove_activity_prompt.txt
scripts/: doctor.sh  setup_venv.sh
src/monarch_tools/: __main__.py  __main__.py.BAK  categorize.py  cli.py  config.py  console.py  monarchcsv.py  sanity.py
src/monarch_tools/commands/: assign.py  assign_tui.py  categorize.py  categorize.py.BAK  categorize.py.BAK2  categorize.py.BAK3  clean.py  extract.py  hello.py  help.py
src/monarch_tools/defaults/: __init__.py  groups.txt  rules.json
src/monarch_tools/extractors/: __init__.py  chase.py
src/monarch_tools/extractors/chase/: activity.py
src/monarch_tools/ui/: categorize_ui.py  rules.py  taxonomy.py  text_utils.py  transactions.py
statements/chase/9391/2018/: 20180112-statements-9391.activity.csv
statements/sample/: sample.activity.csv
tests/: autocomplete.py  test_chase_legacy_amounts.py
