[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-tools"
version = "0.1.0"
description = "Monarch Tools CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pdfplumber"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]